--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>project_template_flutter</title>
+  <title>Training Excercise</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
